# purginator

./: .gitignore  Cargo.toml  README.md  bench.sh  bench.ts  benchmarks.md  mod.ts  package.json  pnpm-lock.yaml  test.ts
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: index.html  styles.css
lib/: purginator.generated.js  purginator_bg.wasm
purginator/: Cargo.toml  build.sh
purginator-cli/: Cargo.toml
purginator-cli/src/: main.rs
purginator/fixtures/attributes/: attribute_selector.css  attribute_selector.html
purginator/pkg/: purginator.d.ts  purginator.js  purginator_bg.wasm  purginator_bg.wasm.d.ts
purginator/src/: html.rs  lib.rs  purger.rs  stylesheet.rs
purginator/src/purger/: html.rs  mod.rs  traits.rs
purginator/tests/: attributes.rs  chaining-rules.rs  css-variables.rs  delimited.rs  font-face.rs  media-queries.rs  pseudo-class.rs  pseudo-elements.rs
purginator/tests/fixtures/pseudo-class/: pseudo_selector.css
purginator/tests/helpers/: mod.rs
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs  stylesheet.rs
src/: main.rs
