[package]
name = "purginator"
version = "0.0.0-experimental.0"
edition = "2021"

[dependencies]
cssparser = "0.29.2"
parcel_css = "1.0.0-alpha.23"
parcel_selectors = "0.24.4"
scraper = "0.13"
thiserror = "1"
wasm-bindgen = "0.2.80"
console_error_panic_hook = { version = "0.1.7", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
