[package]
name = "purginator"
version = "0.0.0-experimental.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
lightningcss = "1.0.0-alpha.35"
parcel_selectors = "0.24.7"
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
gloo-utils = { version = "0.1", features = ["serde"] }
wasm-bindgen = "=0.2.81"
